--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,6 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <h1>Hi!</h1>
-  </body>
-</html>
+{% extends 'layout.html' %}
+
+
+{% block content %}
+<h1>Hi!</h1>
+{% endblock %}
