--- a/templates/home.html
+++ b/templates/home.html
@@ -2,5 +2,13 @@
 
 
 {% block content %}
-<h1>Hi!</h1>
+  <h1>ROSEdu Web Workshops</h1>
+
+  <p>
+    După succesul răsunător al
+    <a href="http://webdev.rosedu.org/">cursurilor WebDev</a>, ROSEdu
+    organizează un nou eveniment, într-un nou format: workshop-uri
+    hands-on, pe teme legate de web.
+  </p>
+
 {% endblock %}
