--- a/templates/home.html
+++ b/templates/home.html
@@ -2,13 +2,20 @@
 
 
 {% block content %}
-  <h1>ROSEdu Web Workshops</h1>
+  <div class="container">
 
-  <p>
-    După succesul răsunător al
-    <a href="http://webdev.rosedu.org/">cursurilor WebDev</a>, ROSEdu
-    organizează un nou eveniment, într-un nou format: workshop-uri
-    hands-on, pe teme legate de web.
-  </p>
+    <div class="hero-unit">
 
+      <h1>ROSEdu Web Workshops</h1>
+
+      <p>
+        După succesul răsunător al
+        <a href="http://webdev.rosedu.org/">cursurilor WebDev</a>,
+        ROSEdu organizează un nou eveniment, într-un nou format:
+        workshop-uri hands-on, pe teme legate de web.
+      </p>
+
+    </div>
+
+  </div>
 {% endblock %}
