--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet"
+      href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
   </head>
   <body>
     {% block content %}{% endblock %}
