--- a/templates/home.html
+++ b/templates/home.html
@@ -17,5 +17,79 @@
 
     </div>
 
+
+    <div class="row">
+
+      <div class="span4">
+
+        <h3>Git avansat</h3>
+
+        <p>
+          <strong>Dată:</strong>
+          16 martie 10:00 - 13:00
+          <span class="label label-warning">(tentative)</span>
+        </p>
+
+        <p>
+          <strong>Locație:</strong>
+          EG-306
+        </p>
+
+        <p>
+          <strong>Speaker:</strong>
+          <a href="http://pilgrimgray.wordpress.com/">Mihai Maruseac</a>
+        </p>
+
+        <p>
+          Tehnici avansate de lucru cu Git: rebase,
+          submodule, stash, rm -rf.
+        </p>
+
+      </div>
+
+      <div class="span4">
+
+        <h3>Something awesome</h3>
+
+        <p>
+          <strong>Dată:</strong>
+          TBA
+        </p>
+
+        <p>
+          <strong>Locație:</strong>
+          TBA
+        </p>
+
+        <p>
+          <strong>Speaker:</strong>
+          Captain America
+        </p>
+
+      </div>
+
+      <div class="span4">
+
+        <h3>Something awesomer</h3>
+
+        <p>
+          <strong>Dată:</strong>
+          TBA
+        </p>
+
+        <p>
+          <strong>Locație:</strong>
+          TBA
+        </p>
+
+        <p>
+          <strong>Speaker:</strong>
+          Jet Lee
+        </p>
+
+      </div>
+
+    </div>
+
   </div>
 {% endblock %}
