our own empty stylesheet

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet"
       href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
+    <link rel="stylesheet"
+      href="{{ url_for('static', filename='style.css') }}">
   </head>
   <body>
     {% block content %}{% endblock %}
