other talks are TBA

--- a/templates/home.html
+++ b/templates/home.html
@@ -45,7 +45,7 @@
 
       <div class="span4">
 
-        <h3>Something awesome</h3>
+        <h3>TBA</h3>
 
         <p>
           <strong>Dată:</strong>
@@ -59,14 +59,14 @@
 
         <p>
           <strong>Speaker:</strong>
-          Captain America
+          TBA
         </p>
 
       </div>
 
       <div class="span4">
 
-        <h3>Something awesomer</h3>
+        <h3>TBA</h3>
 
         <p>
           <strong>Dată:</strong>
@@ -80,7 +80,7 @@
 
         <p>
           <strong>Speaker:</strong>
-          Jet Lee
+          TBA
         </p>
 
       </div>
