--- a/templates/home.html
+++ b/templates/home.html
@@ -41,6 +41,12 @@
           {{ talk['speaker'] }}
         </p>
 
+        <p>
+          <strong>Înregistrare:</strong>
+          <a class="btn btn-small btn-warning"
+             href="{{ talk['registration-link'] }}">Rezervă loc</a>
+        </p>
+
       </div>
 
       <div class="span4">
