--- a/templates/talk.html
+++ b/templates/talk.html
@@ -37,5 +37,10 @@
 
     {{ talk['abstract'] }}
 
+    <iframe src="{{ talk['registration-iframe'] }}"
+            frameborder="0" height="214" width="100%"
+            vspace="0" hspace="0" marginheight="5" marginwidth="5"
+            scrolling="auto" allowtransparency="true"></iframe>
+
   </div>
 {% endblock %}
