extract talk macro

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,35 @@
 {% extends 'layout.html' %}
 
 
+{% macro talk(talk_id) %}
+  {% set talk = talks[talk_id] %}
+
+  {% set url = url_for('.talk', talk_id=talk_id) %}
+  <h3><a href="{{ url }}">{{ talk['title'] }}</a></h3>
+
+  <p>
+    <strong>Dată:</strong>
+    {{ talk['date'] }}
+  </p>
+
+  <p>
+    <strong>Locație:</strong>
+    {{ talk['location'] }}
+  </p>
+
+  <p>
+    <strong>Speaker:</strong>
+    {{ talk['speaker'] }}
+  </p>
+
+  <p>
+    <strong>Înregistrare:</strong>
+    <a class="btn btn-small btn-warning"
+       href="{{ talk['registration-link'] }}">Rezervă loc</a>
+  </p>
+{% endmacro %}
+
+
 {% block content %}
   <div class="container">
 
@@ -20,66 +49,9 @@
 
     <div class="row">
 
-      <div class="span4">
-        {% set talk_id = 'git' %}
-        {% set talk = talks[talk_id] %}
+      <div class="span4">{{ talk('git') }}</div>
 
-        {% set url = url_for('.talk', talk_id=talk_id) %}
-        <h3><a href="{{ url }}">{{ talk['title'] }}</a></h3>
-
-        <p>
-          <strong>Dată:</strong>
-          {{ talk['date'] }}
-        </p>
-
-        <p>
-          <strong>Locație:</strong>
-          {{ talk['location'] }}
-        </p>
-
-        <p>
-          <strong>Speaker:</strong>
-          {{ talk['speaker'] }}
-        </p>
-
-        <p>
-          <strong>Înregistrare:</strong>
-          <a class="btn btn-small btn-warning"
-             href="{{ talk['registration-link'] }}">Rezervă loc</a>
-        </p>
-
-      </div>
-
-      <div class="span4">
-
-        {% set talk_id = 'flask-intro' %}
-        {% set talk = talks[talk_id] %}
-
-        {% set url = url_for('.talk', talk_id=talk_id) %}
-        <h3><a href="{{ url }}">{{ talk['title'] }}</a></h3>
-
-        <p>
-          <strong>Dată:</strong>
-          {{ talk['date'] }}
-        </p>
-
-        <p>
-          <strong>Locație:</strong>
-          {{ talk['location'] }}
-        </p>
-
-        <p>
-          <strong>Speaker:</strong>
-          {{ talk['speaker'] }}
-        </p>
-
-        <p>
-          <strong>Înregistrare:</strong>
-          <a class="btn btn-small btn-warning"
-             href="{{ talk['registration-link'] }}">Rezervă loc</a>
-        </p>
-
-      </div>
+      <div class="span4">{{ talk('flask-intro') }}</div>
 
       <div class="span4">
 
