--- a/templates/home.html
+++ b/templates/home.html
@@ -53,26 +53,7 @@
 
       <div class="span4">{{ talk('flask-intro') }}</div>
 
-      <div class="span4">
-
-        <h3>TBA</h3>
-
-        <p>
-          <strong>Dată:</strong>
-          TBA
-        </p>
-
-        <p>
-          <strong>Locație:</strong>
-          TBA
-        </p>
-
-        <p>
-          <strong>Speaker:</strong>
-          TBA
-        </p>
-
-      </div>
+      <div class="span4">{{ talk('flask-intro-2') }}</div>
 
     </div>
 
